feat(KLVN-601): api endpoints with dummy data (#14)
* feat: api endpoint with dummy data

* chore: config tsoa to use absolute path and security definitions

* fix: reformat & naming
