# src/models/group.ts
@@ -1,0 +1,6 @@
+import { Student } from "./student";
+
+export interface Group {
+  total: number;
+  students: Array<Student>;
+}
