# src/models/student.ts
@@ -1,0 +1,7 @@
+import { UUID } from "src/types";
+
+export interface Student {
+  student_id: UUID;
+  student_name: string;
+  avatar: string;
+}
